tests/sparql/test_suites/internal/ill-typed/good_queries/database/double.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  ?s :double ?o
}
ORDER BY ?s
